Fixed layout issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,19 +1,21 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500'); */
-
 @import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
 
-
-body p {
-  overflow-x: hidden;
-  /* font-family: 'Roboto', sans-serif; */
-  font-family: 'Spartan', sans-serif;
+html {
   color: #CFD8DC;
-  font-size: 16px;
-  background-color: #379683;
-  color: #CFD8DC;
-  
 }
 
+body {
+  overflow-x: hidden;
+  font-family: 'Spartan', sans-serif;
+  color: #383c3d;
+  font-size: 16px;
+  margin-left: 100px;
+  /* background-color: #379683; */
+}
+
+p {
+  font-size: 18px;
+}
 
 /* Toggle Styles */
 
@@ -26,8 +28,10 @@ body p {
 }
 
 .container-fluid {
-  /* background-color: #EFE2BA; */
-  background-color: #379683;
+  /* background-color: #379683; */
+  background-color: #EEE2DC;
+  padding: 3em 0 0 11em;
+  color: #2d3031;
 }
 
 #content {
@@ -37,14 +41,23 @@ body p {
   
 }
 
+ul {
+  margin-top: 14em;
+}
+
+li {
+  padding-right: 5em;
+  margin-bottom: 2em;
+}
+
 /* Sidebar Styles */
 
 #sidebar {
   z-index: 1000;
   position: fixed;
   left: 250px;
-  width: 250px;
-  height: 97.2%;
+  width: 350px;
+  height: 100%;
   margin-left: -250px;
   overflow-y: auto;
   /* background: #37474F; */
@@ -92,15 +105,11 @@ body p {
 #sidebar .nav a i{
   margin-right: 16px;
 }
-
+/* 
 .input-group {
   margin: 2em;
   margin-right: 2em;
-}
-
-.btn {
-  justify-content: right;
-}
+} */
 
 
 .col {
@@ -127,7 +136,13 @@ div.carousel-inner {
     position: absolute;
     font-size: 3em;
     z-index: 20;
-    /* display:table;
-    width:100%;
-    height:100%; */
+}
+
+.form-inline {
+  margin: 2em 0 0 2em;
+}
+
+.btn {
+  margin-top: 1em;
+  margin-left: 8.75em;
 }
